--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,7 @@
             <div class="col-md-3 col-sm-6 col-6">
                 <div class="card border-0 shadow-sm">
                     <div class="card-body p-3">
-                        <i class="fas fa-corn fa-2x fa-md-3x text-success mb-3"></i>
+                        <i class="fas fa-tractor fa-2x fa-md-3x text-success mb-3"></i>
                         <h5 class="h6 h-md-5">Corn</h5>
                         <p class="text-muted small">3 different diseases</p>
                     </div>
