--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,6 +37,11 @@
                             <i class="fas fa-info-circle me-1"></i>About
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <button id="themeToggleBtn" class="btn btn-outline-light ms-2" type="button">
+                            <i class="fas fa-adjust me-1"></i> Toggle Theme
+                        </button>
+                    </li>                    
                 </ul>
             </div>
         </div>
