--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                     </li>
                     <li class="nav-item">
                         <button id="themeToggleBtn" class="btn btn-outline-light ms-2" type="button">
-                            <i class="fas fa-adjust me-1"></i> Toggle Theme
+                            <i class="fas fa-adjust me-1"></i>
                         </button>
                     </li>                    
                 </ul>
