--- a/templates/results.html
+++ b/templates/results.html
@@ -14,7 +14,7 @@
                 </h1>
             </div>
             <div class="col-md-6 text-md-end">
-                <a href="{{ url_for('index') }}" class="btn btn-secondary">
+                <a href="{{ url_for('index') }}" class="btn btn-secondary mt-4">
                     <i class="fas fa-arrow-left me-2"></i>
                     Analyze Another Image
                 </a>
