Changed detection to detector

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}404 Not Found - Plant Disease Detection{% endblock %}
+{% block title %}404 Not Found - Plant Disease Detector{% endblock %}
 
 {% block content %}
 <section class="py-5 text-center">
