--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}500 Server Error - Plant Disease Detection{% endblock %}
+{% block title %}500 Server Error - Plant Disease Detector{% endblock %}
 
 {% block content %}
 <section class="py-5 text-center">
