--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Detection Results - Plant Disease Detection{% endblock %}
+{% block title %}Detection Results - Plant Disease Detector{% endblock %}
 
 {% block content %}
 <!-- Results Header -->
