--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
                 <h1 class="display-5 display-md-4 fw-bold mb-3 mb-md-4">
                     <i class="fas fa-leaf text-success me-2 me-md-3"></i>
-                    Plant Disease Detection
+                    Plant Disease Detector
                 </h1>
                 <p class="lead mb-3 mb-md-4">
                     Upload a photo of your plant to detect diseases and get treatment recommendations. 
