--- a/templates/base.html
+++ b/templates/base.html
@@ -38,9 +38,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <button id="themeToggleBtn" class="btn btn-outline-light ms-2" type="button">
-                            <i class="fas fa-adjust me-1"></i>
-                        </button>
+                        <a class="nav-link" href="#" id="themeToggleBtn" role="button">
+                            <i class="fas" id="themeIcon"></i>
+                        </a>
                     </li>                    
                 </ul>
             </div>
