--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     
     <!-- Custom CSS -->
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <!-- Navigation -->
